# rust-namespace

./: README.md
sample_1_binary/: Cargo.toml
sample_1_binary/src/: file1.rs  main.rs
sample_1_binary/src/file1/: sub_file_1.rs
sample_1_binary/src/file2/: mod.rs
sample_1_binary_1_library/: Cargo.toml
sample_1_binary_1_library/src/binary/: main.rs
sample_1_library/: Cargo.toml
sample_1_library/src/: lib.rs
sample_1_library/src/file1/: sub_file_1_2.rs
sample_1_library/src/file2/: sub_mod.rs
sample_n_binary_1_library/: Cargo.toml
sample_n_binary_1_library/src/: main_1.rs  main_2.rs
sample_n_binary_1_library/src/lib/: lib.rs
sample_n_binary_1_library/src/main_3/: main_3.rs
sample_n_sub_packages/: Cargo.toml
sample_n_sub_packages/src/: main.rs
sample_n_sub_packages/subpackage1/: Cargo.toml
sample_n_sub_packages/subpackage2/: Cargo.toml
sample_n_sub_packages/subpackage2/src/: lib.rs
sample_simple/: Cargo.toml
sample_simple/src/: asd.rs  lib.rs  main.rs
sample_simple/src/asd/: lib1.rs  lib2.rs
sample_simple_dirs/: Cargo.toml
sample_simple_dirs/src/: asd.rs  lib.rs
sample_simple_dirs/src/asd/: asd1.rs
workspace/: Cargo.toml
workspace/package_1_binary/: Cargo.toml
workspace/package_1_binary/src/: main.rs  service.rs
workspace/package_2_binary/: Cargo.toml
workspace/package_2_binary/src/: main.rs
workspace/package_2_binary/src/service/: mod.rs
workspace/package_3_library/: Cargo.toml
workspace/package_3_library/src/: adder_test.rs  lib.rs
workspace/package_3_library/src/multiplier/: mod.rs
(+1 files in other folders)
