[package]
name = "sample_n_binary_1_library"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main_1"
path = "src/main_1.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "main_2"
path = "src/main_2.rs"

[[bin]]
name = "main_3"
path = "src/main_3/main_3.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
